# JsonToTlvConverter

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README  README.md  conanfile.py  input.txt  rebuild.sh
include/: json_dictionary_parser.h  jsontotlvconverter.h  jsontotlvconverterinputstrategyfactory.h  jsontotlvconverterinputstrategyfileio.h  jsontotlvconverterinputstrategystdio.h
include/include/: jsontotlvconverterinputstrategy.h
include/jsontotlvconverterinputstrategy/: jsontotlvconverterinputstrategyfactory.h  jsontotlvconverterinputstrategyinterface.h  jsontotlvconverterinputstrategystdio.h
include/jsontotlvconverteroutputstrategy/: jsontotlvconverteroutputstrategyfactory.h  jsontotlvconverteroutputstrategyfileio.h  jsontotlvconverteroutputstrategyinterface.h  jsontotlvconverteroutputstrategystdio.h
include/src/: jsontotlvconverterinputstrategy.cpp
src/: jsontotlvconverter.cpp  jsontotlvconverterinputstrategy.cpp  jsontotlvconverterinputstrategyfactory.cpp  jsontotlvconverterinputstrategyfileio.cpp  jsontotlvconverterinputstrategystdio.cpp  main.cpp
src/jsontotlvconverterinputstrategy/: jsontotlvconverterinputstrategyfactory.cpp  jsontotlvconverterinputstrategyfileio.cpp  jsontotlvconverterinputstrategystdio.cpp
src/jsontotlvconverteroutputstrategy/: jsontotlvconverteroutputstrategyfactory.cpp  jsontotlvconverteroutputstrategyfileio.cpp  jsontotlvconverteroutputstrategystdio.cpp
test_package/: conanfile.py  test1_empty_input.tlv  test2_task_input.tlv  test3_one_record.json  test3_one_record.tlv  test4_maxint.json  test4_maxint.tlv  test5_long_record.json  test5_long_record.tlv
